--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,10 @@ torch>=1.13.0
 torchvision>=0.14.0
 numpy>=1.23.0
 scikit-learn>=1.1.0
+scikit-image>=0.19.0
 scipy>=1.9.0
+pandas>=1.5.0
 matplotlib>=3.6.0
 Pillow>=9.3.0
+pyyaml>=6.0
+pytest>=7.0.0
